Añadido "clear" en la paginación de Proyecto/Cofinanciadores, se quedaba colgado cuando había un número impar de elementos en la página.

--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -226,7 +226,8 @@ div.widget.project-supporters .supporters ul li dl dd.worthcracy ul li > strong 
 }
 
 div.widget.project-supporters ul#pagination {
-	margin: 10px 0px 0px 0px !important;
+    margin: 10px 0px 0px 0px !important;
+    clear: both;
 }
 
 /* Widget lateral de cofinanciadores: div.widget.project-investors */
