Disminuido el tamaño de la fuente en los "balloons" de la lista de proyecto para que quepan 3 líneas, y para que esté más acorde con el resto del widget.

--- a/view/css/project/widget/projects.css
+++ b/view/css/project/widget/projects.css
@@ -29,6 +29,7 @@ div.widget.projects div.project div.balloon > blockquote {
     overflow: hidden;
     padding: 0;
     margin: 0;
+    font-size: 11px;
 }
 
 div.widget.projects div.project div.balloon > h4 {
