--- a/view/css/header.css
+++ b/view/css/header.css
@@ -466,18 +466,18 @@ div#header div#menu > ul > li.home > a {
     text-indent: 2000px;
     display: block;
     line-height: 2000px;
-    width: 106px;
+    width: 105px;
     height: 36px;  
     position: absolute;
     left: 50%;
     top: 50%;
     margin-left: -30px;
     margin-top: -19px;
-    background: url('header/goteo.png') no-repeat left;        
+    background: url('header/goteo.png') no-repeat left center;        
 }
 
 div#header div#menu > ul > li.home > a:hover {
-    background: url('header/goteo.png') no-repeat 102% center;
+    background: url('header/goteo.png') no-repeat right center;
 }
 
 div#header div#menu > ul > li.explore,
