--- a/view/css/home.css
+++ b/view/css/home.css
@@ -5,6 +5,10 @@ body.home div#main div.learn {
     position: relative;
 }
 
+body.home div#main div.widget.projects .title {
+    margin-left: 8px;
+}
+
 body.home div#main div.learn ul {
     position: absolute;
     bottom: 20px;
