--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -56,7 +56,7 @@ div.widget.project div.image div.investor {
     position: absolute;
     z-index: 9999;
     background-color: #f3f3f3;
-    margin-top: 81px;
+    margin-top: 70px;
     margin-left: 3px;
 }
 
@@ -94,7 +94,7 @@ div.widget.project div.image div.categories {
     background-color: #19b5b3;
     font-size: 0.8em;
     text-transform: uppercase;    
-    padding: 4px 8px;
+    padding: 2px 8px;
     opacity: 0.8;
     filter: alpha(opacity=80);
     cursor: default;
@@ -129,6 +129,11 @@ div.widget.project > .title {
     font-size: 14px !important;
     height: 2em;
     padding: 0px 12px !important;
+    margin: 0px !important;
+}
+
+div.widget.project .title {
+    background: none !important;
 }
 
 div.widget.project > .title a {
