--- a/view/css/user/profile.css
+++ b/view/css/user/profile.css
@@ -23,3 +23,6 @@ div.widget.user-supporters h3.supertitle {
     border-bottom: 1px solid #313B96 !important;
 }
 
+body.user-profile div#main div.discover-group div.widget.project {
+    margin: 0px 0px 0px 15px;
+}
