arreglos * en mac os y en ubuntu salian recuadros a las imagenes con enlace * el ver mas en la home tiene que estar abajo * el logo a 104 de ancho para que no haga movimiento en el rollover

--- a/view/css/common.css
+++ b/view/css/common.css
@@ -22,6 +22,10 @@ body, td, th, a, a:link, a:visited, a:active, a:hover, input, textarea, button {
     color: #58595b;
 }
 
+img {
+    border: none;
+}
+
 input, textarea, button {
     font-size: 14px;
 }
