--- a/view/css/dashboard/profile/profile.css
+++ b/view/css/dashboard/profile/profile.css
@@ -1,4 +1,7 @@
-body.project-edit div#main.profile div.superform li.element.webs li.element.web li.element,
+/**
+ * Profile
+ */
+
 body.project-edit div#main.profile div.superform li.element.user_avatar > div.children > div.elements > ol > li.element {
 /*    display: table-cell; */
     display: inline-block;
@@ -7,22 +10,6 @@ body.project-edit div#main.profile div.superform li.element.user_avatar > div.ch
 
 body.project-edit div#main.profile div.superform li.element.user_avatar ol {
     padding: 0;
-}
-
-body.project-edit div#main.profile div.superform li.element.webs li.element.web-url {
-    width: 100%;
-    padding-right: 1em;
-}
-
-body.project-edit div#main.profile div.superform li.element.webs li.element.web-accept input,
-body.project-edit div#main.profile div.superform li.element.webs li.element.web-remove input {
-    margin: 0;
-    margin-right: 3px;
-}
-
-body.project-edit div#main.profile div.superform li.element.webs > div.children > div.elements > ol ol {
-    padding: 0;
-    margin: 0;
 }
 
 body.project-edit div#main.profile div.superform li.element.user_avatar li.element.avatar-image {
@@ -38,3 +25,51 @@ body.project-edit div#main.profile div.superform li.element.user_avatar li.eleme
 body.project-edit div#main.profile div.superform li.element.user_avatar li.element .title {
     display: none;
 }
+
+/* Registros de web */
+
+body.project-edit div#main.profile div.superform li.element.web div.title {
+    font-size: 14px;
+    text-transform: uppercase;
+    width: 70%;
+    float: left;
+}
+
+body.project-edit div#main.profile div.superform li.element.web input.edit {
+    margin-top: -1em;
+}
+
+body.project-edit div#main.profile div.superform li.element.web input.remove {
+    margin-bottom: 1em;
+    margin-top: 0;
+}
+
+/* Edicion de web */
+body.project-edit div#main.profile div.superform li.element.editweb li.element.web-accept input,
+body.project-edit div#main.profile div.superform li.element.editweb li.element.web-remove input {
+    margin: 0;
+    margin-right: 3px;
+}
+
+body.project-edit div#main.profile div.superform li.element.editweb li.buttons div.contents,
+body.project-edit div#main.profile div.superform li.element.editweb li.buttons ol {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+body.project-edit div#main.profile div.superform li.element.editweb li.buttons ol {
+    text-align: right;
+}
+
+body.project-edit div#main.profile div.superform li.element.editweb li.buttons li {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+body.project-edit div#main.profile div.superform li.element.editweb li.buttons input {
+    width: auto;
+    float: left;
+    margin: 0 10px 0 0;
+}
+
