Cambio de criterio en rollover widget * solamente se opaca la imagen * el widget cambia de color

--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -1,6 +1,10 @@
 div.widget.project.active {
+    background-color: #f8f8f8 !important;
+}
+
+div.widget.project.active div.image {
     opacity: 0.85;
-    filter: alpha(opacity=85);    
+    filter: alpha(opacity=85);
 }
 
 div.widget.project.active > .title a {
