--- a/view/css/project/widget/projects.css
+++ b/view/css/project/widget/projects.css
@@ -5,7 +5,7 @@ div.widget.projects > .title {
 }
 
 div.widget.projects div.project {
-    background-color: #edecec;
+    background-color: #ebeaeb;
     margin: 0 0 3.33% 3.33%;
     float: left;    
     padding: 0;
