--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -34,7 +34,7 @@ div#main {
     width: 940px;
     margin: 10px auto;
     clear: both;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     position: relative;
     z-index: 0;
