--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -185,3 +185,23 @@ body.project-show div#main > div.center > div.widget {
 body.project-show div#main > div.side > div.widget .title {
     background: none !important;
 }
+
+/* = ayuda a difundir este proyecto
+***********************************/
+div.widget.project-spread > h3.title{padding-left:46px;}
+div.widget.project-spread > div.widget.projects > div.left{float:left;width:280px;border-right:#000 1px solid;}
+div.widget.project-spread > div.widget.projects > div.right{float:left;width:245px;margin-left:12px;}
+div.widget.project-spread div.subtitle{width:245px;text-transform:uppercase;margin:0 0 10px 7px;}
+	div.widget.project-spread div.subtitle#s1{}
+	div.widget.project-spread div.subtitle#s2{}	
+	div.widget.project-spread div.subtitle > span{display:block;}
+	div.widget.project-spread div.subtitle > span.primero{margin-bottom:3px;}	
+	div.widget.project-spread div.subtitle > span.segundo{color:#28ACAB;font-weight:bold;}		
+	
+/* = envía mensaje al autor - widget embed code
+**************************************************/
+div.widget.projects #widget-code{	width:350px;	float:left; margin: 0 0 0 20px;}
+div.widget.projects  #widget-code .wc-embed{background: url("/view/css/social/embed.png") no-repeat;	height:20px;text-transform:uppercase;padding: 3px 0 0 25px;}
+div.widget.projects  #widget-code textarea{width:200px;	margin: 10px 0;	padding:10px;	background:#E7E7E7;		border:none;	font-size:11px;	resize:none;}
+
+
