--- a/view/css/project/widget/projects.css
+++ b/view/css/project/widget/projects.css
@@ -56,17 +56,24 @@ div.widget.projects > div.more a:hover {
     text-decoration: underline;
 }
 
-/* Estilos para el apartado WIDGETS de MIS PROYECTOS en el DASHBOARD */
-
+/* = Apartado WIDGETS de MIS PROYECTOS en el DASHBOARD 
+**************************************************************************/
 div.widget.projects > .widget-title {
-    margin: 0 0 5px 30px;
-    padding: 0;
-
+    padding: 0 0 0 30px;
 }
 div.widget.projects > .widget-porject-legend {
 	margin: 0 0 20px 30px;
 	text-transform:uppercase;
 }
+
+div.widget.projects > .project-code {
+	float: left;
+	height: auto;
+	margin-left: 45px;
+	overflow: auto;
+	width: auto;
+}
+
 div.widget.projects > #widget-code  {
 	width:350px;
 	float:left;
@@ -78,9 +85,20 @@ div.widget.projects > #widget-code .wc-embed  {
 	text-transform:uppercase;
 	padding: 3px 0 0 25px;
 }
-div.widget.projects > #widget-code blockquote  {
+div.widget.projects > #widget-code textarea  {
 	width:200px;
 	margin: 10px 0;
 	padding:10px;
-	background:#E7E7E7;
+	background:#E7E7E7;	
+	border:none;
+	font-size:11px;
+	resize:none;
 }
+
+
+/* fancybox widget del proyecto en vista pública de proyecto
+**************************************************************/
+div#proyecto h2.widget-title{font-weight:normal;font-size:20px;margin-bottom:1px;}
+div#proyecto div#project-code{float: left;width: auto;margin:0 0 0 30px;}
+div#proyecto div#widget-code{float: left;width: 220px;}
+div#proyecto div#widget-code blockquote{font-size:11px;}
