--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -110,3 +110,8 @@ div.read_more a:hover {
     color: #20B3B2;
 }
 /** end readmore **/
+
+div#message{background: none repeat scroll 0 0 #19B4B2;color: #FFFFFF;padding: 20px 0;text-transform: uppercase;width: 100%;}
+div#message div#message-content{width:940px;margin:0 auto;position:relative;}
+div#message div#message-content input.message-close{ background:url(message-close.jpg) no-repeat; width:34px;height:33px;border:none;position:absolute;top:-8px;right:0;z-index:100; cursor:pointer;}
+div#message div#message-content ul{list-style:none;margin:0;padding:0;}
